--- a/Journey/Journey/Resources/Storyboards/Challenge/CourseLibrary.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Challenge/CourseLibrary.storyboard
@@ -29,7 +29,7 @@
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="tND-pp-FQB" secondAttribute="bottom" id="D35-OB-fAm"/>
                             <constraint firstItem="tND-pp-FQB" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="EGj-PA-yAH"/>
