--- a/Journey/Journey/Resources/Storyboards/Home/Setting.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Home/Setting.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -33,9 +34,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="05O-F8-VWo">
-                                                    <rect key="frame" x="30" y="30" width="41" height="20.5"/>
+                                                    <rect key="frame" x="30" y="30.5" width="39.5" height="19"/>
                                                     <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="16"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" name="Black1Text"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -44,6 +45,7 @@
                                                 <constraint firstItem="05O-F8-VWo" firstAttribute="leading" secondItem="NYE-90-QDk" secondAttribute="leading" constant="30" id="OQa-kj-GWX"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" name="White"/>
                                         <connections>
                                             <outlet property="titleLabel" destination="05O-F8-VWo" id="1ck-Fp-g8B"/>
                                         </connections>
@@ -70,6 +72,12 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="Black1Text">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="White">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
