--- a/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
@@ -140,7 +140,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="70" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="비밀번호 찾기 ">
-                                            <color key="titleColor" systemColor="systemGray2Color"/>
+                                            <color key="titleColor" name="black4Text"/>
                                         </state>
                                         <connections>
                                             <action selector="findPasswordButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zou-xg-Hk3"/>
@@ -149,14 +149,14 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="l " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBD-8D-N51">
                                         <rect key="frame" x="80.000000000000014" y="0.0" width="6.6666666666666714" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" systemColor="systemGray2Color"/>
+                                        <color key="textColor" name="black4Text"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAt-3L-jxc">
                                         <rect key="frame" x="96.666666666666671" y="0.0" width="42.000000000000014" height="31"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <state key="normal" title="회원가입">
-                                            <color key="titleColor" systemColor="systemGray2Color"/>
+                                            <color key="titleColor" name="black4Text"/>
                                         </state>
                                         <connections>
                                             <action selector="signUpButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Ieq-p3-6fg"/>
@@ -169,7 +169,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="K6r-Lj-O8f" firstAttribute="top" secondItem="Go9-gf-e6q" secondAttribute="bottom" constant="27" id="3Sn-eJ-XxI"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Go9-gf-e6q" secondAttribute="trailing" constant="24" id="8tu-x5-Bcp"/>
@@ -211,11 +211,11 @@
         <namedColor name="Pink2">
             <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <namedColor name="black4Text">
+            <color red="0.67500001192092896" green="0.67500001192092896" blue="0.67500001192092896" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
