--- a/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseTableView/FirstDayTableViewCell.xib
@@ -48,13 +48,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="1일차" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ssc-oE-dGm">
                                 <rect key="frame" x="114" y="0.0" width="47" height="25.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="21"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="Black1Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알콜스왑으로 핸드폰 닦기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcm-tR-8hh">
                                 <rect key="frame" x="0.0" y="33.5" width="161" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" name="Black2Text"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -72,7 +72,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="Pink"/>
+                        <color key="backgroundColor" name="Pink2"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="NRs-Gb-6Xj" secondAttribute="trailing" constant="12" id="886-1I-r3g"/>
                             <constraint firstItem="NRs-Gb-6Xj" firstAttribute="leading" secondItem="W98-sa-HWL" secondAttribute="leading" constant="12" id="bKv-vE-TI4"/>
@@ -109,11 +109,14 @@
     </objects>
     <resources>
         <image name="waterSampleImg" width="36" height="36"/>
+        <namedColor name="Black1Text">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Black2Text">
+            <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="CourseBgGray">
             <color red="0.97600001096725464" green="0.97600001096725464" blue="0.97600001096725464" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Pink">
-            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Pink2">
             <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
