--- a/Journey/Journey/Sources/ViewControllers/PopUp/HappyPopUpViewController.xib
+++ b/Journey/Journey/Sources/ViewControllers/PopUp/HappyPopUpViewController.xib
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -37,16 +36,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g2h-0J-CTp">
-                    <rect key="frame" x="31" y="203.33333333333334" width="328" height="507.33333333333326"/>
+                    <rect key="frame" x="31" y="203" width="328" height="508"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소확행 작성 완료!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bsK-lA-pYe">
-                            <rect key="frame" x="29" y="47" width="270" height="24"/>
+                            <rect key="frame" x="29" y="47" width="270" height="28"/>
                             <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" name="Black1Text"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ajE-AL-GN7">
-                            <rect key="frame" x="28" y="396.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="397" width="272" height="44"/>
                             <color key="backgroundColor" name="Pink2"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="K48-aK-J3n"/>
@@ -60,7 +59,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="psJ-Zi-EXe">
-                            <rect key="frame" x="28" y="442.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="443" width="272" height="44"/>
                             <color key="backgroundColor" name="White"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="gVk-pE-v2Q"/>
@@ -74,13 +73,13 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_5732" translatesAutoresizingMaskIntoConstraints="NO" id="myr-i4-ZfU">
-                            <rect key="frame" x="66" y="168.33333333333337" width="196" height="196"/>
+                            <rect key="frame" x="66" y="169" width="196" height="196"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="myr-i4-ZfU" secondAttribute="height" multiplier="1:1" id="y5p-WZ-vJe"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLg-ol-DGp">
-                            <rect key="frame" x="32" y="90.999999999999972" width="264" height="45.333333333333343"/>
+                            <rect key="frame" x="32" y="95" width="264" height="42"/>
                             <string key="text">당신의 행복이 하나 더 늘었군.
 다른 쟈기들과 함께하면 기쁨이 배가 될거야.
 함께 행복을 공유해보겠어?</string>
@@ -89,7 +88,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="myr-i4-ZfU" secondAttribute="trailing" constant="66" id="1Ti-NU-5pU"/>
                         <constraint firstItem="myr-i4-ZfU" firstAttribute="centerX" secondItem="g2h-0J-CTp" secondAttribute="centerX" id="74U-1k-beF"/>
@@ -113,7 +112,7 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="happyCFaceGraphic1" translatesAutoresizingMaskIntoConstraints="NO" id="heI-sw-gBP">
-                    <rect key="frame" x="31" y="101.33333333333331" width="149" height="132"/>
+                    <rect key="frame" x="31" y="101" width="149" height="132"/>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -132,6 +131,9 @@
     <resources>
         <image name="IMG_5732" width="63.333332061767578" height="80"/>
         <image name="happyCFaceGraphic1" width="149" height="132"/>
+        <namedColor name="Black1Text">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Black2Text">
             <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -141,8 +143,5 @@
         <namedColor name="White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
